--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,7 @@
 <head>
     <title>Index page</title>
     <link type="text/css" rel="stylesheet" href="Style1.css" />
+    <script type="text/javascript" src="JSFile.js"></script>
 </head>
 <body>
 
